--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+
+/* 
+.btn-green {
+  background-color: rgb(0, 212, 126);
+  border: none;
+
+  &:hover {
+    background-color: rgb(193, 242, 222);
+    color: rgb(0, 212, 126);
+  }
+}
+*/
