--- a/client/src/components/FooterPublic/FooterPublic.css
+++ b/client/src/components/FooterPublic/FooterPublic.css
@@ -1,6 +1,21 @@
 .footer-public {
   background-color: rgb(16, 40, 48);
   height: 20dvh;
+  padding-inline: 7rem;
 
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+
+  img {
+    width: 20rem;
+  }
+
+  .child2 {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+  }
 }
