--- a/client/src/components/NavbarPublic/NavbarPublic.css
+++ b/client/src/components/NavbarPublic/NavbarPublic.css
@@ -2,6 +2,39 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: rgb(250, 252, 254);
   height: 20dvh;
+  padding: 3rem;
+
+  img {
+    width: 25rem;
+  }
+
+  .buttons-cont {
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  .btn-green {
+    background-color: rgb(0, 212, 126);
+    border: none;
+
+    &:hover {
+      background-color: rgb(193, 242, 222);
+      color: rgb(0, 212, 126);
+    }
+  }
+
+  .btn-white {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(143, 143, 143);
+    color: black;
+
+    &:hover {
+      background-color: rgb(188, 188, 188);
+      border: 1px solid rgb(255, 255, 255);
+    }
+  }
+
 }
