--- a/client/src/components/FormUserRegister/FormUserRegister.css
+++ b/client/src/components/FormUserRegister/FormUserRegister.css
@@ -1,4 +1,4 @@
-.btn-green {
+/* .btn-green {
   background-color: rgb(0, 212, 126);
   border: none;
 
@@ -6,7 +6,7 @@
     background-color: rgb(193, 242, 222);
     color: rgb(0, 212, 126);
   }
-}
+} */
 
 .register-container {
   padding: 2rem;
