--- a/client/src/components/MyButton/MyButton.css
+++ b/client/src/components/MyButton/MyButton.css
@@ -1,21 +1,25 @@
 /* ESTILOS DE BOTÓN */
 .btn-green {
-  background-color: rgb(0, 212, 126);
-  border: none;
+  background-color: rgb(0, 212, 126) !important;
+  border: none !important;
 
   &:hover {
-    background-color: rgb(193, 242, 222);
-    color: rgb(0, 212, 126);
+    background-color: rgb(193, 242, 222) !important;
+    color: rgb(0, 212, 126) !important;
   }
 }
 
 .btn-white {
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(143, 143, 143);
-  color: black;
+  background-color: rgb(255, 255, 255) !important;
+  border: 1px solid rgb(143, 143, 143) !important;
+  color: black !important;
 
   &:hover {
-    background-color: rgb(188, 188, 188);
-    border: 1px solid rgb(255, 255, 255);
+    background-color: rgb(188, 188, 188) !important;
+    border: 1px solid rgb(255, 255, 255) !important;
   }
+}
+
+.btn-blue {
+  background-color: rgb(68, 126, 247) !important;
 }
