fix home, fix buttons, navbar public & footer

--- a/client/src/components/MyButton/MyButton.css
+++ b/client/src/components/MyButton/MyButton.css
@@ -22,4 +22,8 @@
 
 .btn-blue {
   background-color: rgb(68, 126, 247) !important;
+
+  &:hover {
+    background-color: rgb(38, 75, 151) !important;
+  }
 }
