--- a/client/src/components/NavbarUser/NavbarUser.css
+++ b/client/src/components/NavbarUser/NavbarUser.css
@@ -1,6 +1,7 @@
 .front-page {  
   line-height: 2.5rem;
   color: white;
+  position: fixed;
 
   h1 {
     padding: 1rem;
@@ -10,6 +11,9 @@
 .lateral-bar {
   background-color: rgb(28, 37, 52);
   padding: 2rem;
+  height: 100vh;
+  width: 350px;
+  min-width: 350px;
 
   display: flex;
   flex-direction: column;
