--- a/client/src/components/NavbarAdmin/NavbarAdmin.css
+++ b/client/src/components/NavbarAdmin/NavbarAdmin.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 100dvh;
 
   .child2 {
     text-align: right;
