--- a/client/src/components/NavbarAdmin/NavbarAdmin.css
+++ b/client/src/components/NavbarAdmin/NavbarAdmin.css
@@ -12,11 +12,17 @@
 .lateral-bar {
   background-color: rgb(28, 37, 52);
   padding: 2rem;
+  height: 100dvh;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100dvh;
+
+  .link {
+    color: white;
+    padding-left: 10px;
+    text-decoration: none;
+  }
 
   .child2 {
     text-align: right;
@@ -38,15 +44,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    p {
-      padding-left: 10px;
-    }
   }
 
   .container-graphics {
     display: flex;
     align-items: center;
+
+    .options-cont {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   /* DETAILS */
@@ -55,6 +62,11 @@
     justify-content: space-between;
     align-items: center;
     list-style: none;
+  }
+  
+  details summary p {
+    margin: 0;
+    padding-left: 10px;
   }
 
   details summary::after {
@@ -70,6 +82,5 @@
   details> :not(summary) {
     padding-left: 1rem;
   }
-
 
 }
