--- a/client/src/components/NavbarUser/NavbarUser.css
+++ b/client/src/components/NavbarUser/NavbarUser.css
@@ -18,6 +18,12 @@
   flex-direction: column;
   justify-content: space-between;
 
+  .link {
+    color: white;
+    padding-left: 10px;
+    text-decoration: none;
+  }
+
   .child2 {
     text-align: right;
     font-family: Arial, Helvetica, sans-serif;
@@ -38,18 +44,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    p {
-      padding-left: 10px;
-    }
   }
 
   .container-graphics {
     display: flex;
     align-items: center;
 
-    svg {
-      margin-right: 10px;
+    p {
+      padding-left: 10px;
+    }
+
+    .options-cont {
+      display: flex;
+      flex-direction: column;
     }
   }
 
@@ -61,7 +68,12 @@
     list-style: none;
   }
 
- details summary::after {
+  details summary p {
+    margin: 0;
+    padding-left: 10px;
+  }
+
+  details summary::after {
     padding-left: 1rem;
     content: "➤";
     transition: transform 0.1s;
@@ -73,6 +85,6 @@
 
   details> :not(summary) {
     padding-left: 1rem;
-  } 
+  }
 
 }
