--- a/client/src/components/CardTest/cardTest.css
+++ b/client/src/components/CardTest/cardTest.css
@@ -34,6 +34,33 @@
       width: 100%;
       border-radius: 2rem;
       background-color: #E5E7EA;
+
+      .highResult {
+        border-radius: 2rem;
+        /* background-color: rgb(47, 255, 50); */
+        background-color: rgb(6, 147, 9);
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+      .medResult {
+        border-radius: 2rem;
+        background-color: rgb(255, 224, 47);
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        
+      }
+      
+      .lowResult {
+        border-radius: 2rem;
+        background-color: rgb(255, 47, 47);
+        height: 100%;
+        margin: 0;
+        padding: 0;
+
+      }
     }
   }
 
