ya esta conectado, falta traer bien los datos

--- a/client/src/pages/companyPages/EditCompanyPage/EditCompany.css
+++ b/client/src/pages/companyPages/EditCompanyPage/EditCompany.css
@@ -1,7 +1,8 @@
 .edit-profile-container {
     background-color: var(--bg);
     min-height: 100vh;
-    width: 100%;
+    margin-left: 20px;
+    width: calc(100% - 20px);
 }
 
 .header-content {
