--- a/client/src/pages/companyPages/OneTestCompany/oneTest.css
+++ b/client/src/pages/companyPages/OneTestCompany/oneTest.css
@@ -19,8 +19,13 @@
 
   }
 
-  .historicTest {
+  .historicTestContainer {
 
+    background-color: white;
+    display: flex;
+    justify-content: center;
+
+    
   }
 
 }
