--- a/client/src/components/CardTestAdmin/cardTestAdmin.css
+++ b/client/src/components/CardTestAdmin/cardTestAdmin.css
@@ -1,5 +1,4 @@
 .card-test {
-
   display: flex;
   flex-direction: column;
   background-color: white;
@@ -7,6 +6,7 @@
   padding: 2rem;
   border-radius: .5rem;
   gap: 2rem;
+    height: 15rem;
 
   .image-title {
 
