--- a/client/src/components/InfoRepresentante/InfoRepresentante.css
+++ b/client/src/components/InfoRepresentante/InfoRepresentante.css
@@ -3,11 +3,11 @@
   --line-height: 2rem;
 }
 
-.company_information span{
+.contact_info span{
   font-weight: bold;
 }
 
-.company_information h3 {
+.contact_info h3 {
   font-size: var(--font-size);
   line-height: var(--line-height);
 }
