--- a/client/src/components/Navbar/NavbarAdmin/NavbarAdmin.css
+++ b/client/src/components/Navbar/NavbarAdmin/NavbarAdmin.css
@@ -44,6 +44,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    &:hover {
+      background-color: rgb(62, 87, 129);
+      border-radius: 0.5rem;
+      width: 11rem;
+    }
   }
 
   .container-graphics {
@@ -62,8 +68,13 @@
     justify-content: space-between;
     align-items: center;
     list-style: none;
+
+    &:hover {
+      background-color: rgb(62, 87, 129);
+      border-radius: 0.5rem;
+    }
   }
-  
+
   details summary p {
     margin: 0;
     padding-left: 10px;
