--- a/client/src/components/Navbar/NavbarUser/NavbarUser.css
+++ b/client/src/components/Navbar/NavbarUser/NavbarUser.css
@@ -29,10 +29,6 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
-  img {
-    width: 15rem
-  }
-
   .logos {
     padding-inline: 2rem;
     padding-top: 1rem;
@@ -44,6 +40,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    &:hover {
+      background-color: rgb(62, 87, 129);
+      border-radius: 0.5rem;
+      width: 11rem;
+    }
   }
 
   .container-graphics {
@@ -66,6 +68,11 @@
     justify-content: space-between;
     align-items: center;
     list-style: none;
+
+    &:hover {
+      background-color: rgb(62, 87, 129);
+      border-radius: 0.5rem;
+    }
   }
 
   details summary p {
