--- a/client/src/components/FormCompanyRegister/formCompanyRegister.css
+++ b/client/src/components/FormCompanyRegister/formCompanyRegister.css
@@ -1,12 +1,112 @@
-.ppal{
+.register-profile-container {
+  background-color: var(--bg);
+  min-height: 100vh;
+  margin-left: 20px;
+  width: calc(100% - 20px)
+}
+
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+}
+
+.form-main{
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.form{
+.form-section{
+  width: 70%;
+}
+
+.form-card{
+  background-color: #FFFFFF;
+  border-radius: 16px;
+  padding: 2.5rem;
+  border: 1px solid #EDF2F7;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  margin-top: 1rem;
+  font-weight: 600;
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  width: 50%;
+  align-items: left;
+  gap: .9rem;
+
+  input, select{
+    border-radius: 8px;
+    width: 50%;
+    padding: 1px;
+    margin-inline-start: 1rem;
+  }
 }
+
+.title-form {
+  font-size: 3rem;
+  font-weight: 600;
+  color: #475569;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  margin-block-start: 1.5rem;
+}
+
+/* Estilo check boxes */
+
+.checkbox-container {
+  margin-top: 2rem;
+  padding: 10px;
+  background-color: #F8FAFC;
+  border: 1px solid #E2E8F0;
+  border-radius: 12px;
+  height: 100%
+}
+
+.checkbox-group {
+}
+
+.checkbox-grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px 20px;
+
+}
+
+.checkbox-item{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.checkbox-item input{
+  margin:0;
+  flex-shrink: 0;
+}
+
+.checkbox-group input {
+  margin-bottom: 10px;
+  min-height: 1.5rem;
+  border: 1px solid #CBD5E1;
+  cursor: pointer
+}
+
+.checkbox-group label {
+  margin-top: 0 !important;
+  color: #475569;
+  cursor: pointer
+}
+
+.red{
+  color:red;
+}
+
