--- a/client/src/components/HistoricTestContainer/historyTest.css
+++ b/client/src/components/HistoricTestContainer/historyTest.css
@@ -3,7 +3,7 @@
   background-color: #1C2534;
   display: flex;
   flex-direction: column;
-  padding: 3rem;
+  padding: 1rem 4rem;
   gap: 1rem;
   border-radius: .5rem;
   width: 80%;
