--- a/client/src/components/HistoricTestContainer/historyTest.css
+++ b/client/src/components/HistoricTestContainer/historyTest.css
@@ -1,8 +1,8 @@
 .historyTestList {
-
   background-color: #1C2534;
   display: flex;
   flex-direction: column;
+
   padding: 1rem 4rem;
   gap: 1rem;
   border-radius: .5rem;
@@ -10,10 +10,11 @@
 
   .historyTestCard {
     background-color: white;
-    display: flex;
-    justify-content: center;
+    display: flex;  
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 0.5rem;
     align-items: center;
-    gap: 5rem;
     border-radius: .5rem;
     padding: .5rem;
 
