--- a/client/src/pages/companyPages/OneTestCompany/oneTest.css
+++ b/client/src/pages/companyPages/OneTestCompany/oneTest.css
@@ -1,5 +1,5 @@
-
 .oneTest {
+  padding: 1.5rem;
 
   .newTest {
     display: flex;
@@ -8,7 +8,7 @@
     gap: 2rem;
 
     img {
-      width: 250px;
+      width: 220px;
     }
 
     .btnOneTest {
@@ -20,12 +20,14 @@
   }
 
   .historicTestContainer {
-
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding: 1rem;
+    border: 1px solid rgb(231, 235, 242);
+    border-radius: .5rem;
     background-color: white;
     display: flex;
     justify-content: center;
-
-    
   }
 
 }
