--- a/client/src/components/CompaniesCard/CompaniesCard.css
+++ b/client/src/components/CompaniesCard/CompaniesCard.css
@@ -5,17 +5,25 @@
   margin-bottom: 2rem;
   color: #1a1a2e;
 }
-
-.card {
- width: 100%; 
-  max-width: 100%;
-  overflow: hidden;
+ 
+.accordion-button:not(.collapsed) {
+  background-color: rgba(35, 41, 35, 0.134);
+  color: inherit;
+  box-shadow: none;
+}
+ 
+.accordion-button:focus {
+  box-shadow: none;
+  border-color: transparent;
+}
+ 
+.myLink {
+  text-decoration: none;
+}
+ 
+.card-accordion {
+ 
   display: flex;
-  gap: 10px;
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  flex-wrap: wrap; 
-  
+  flex-direction: column;
+  justify-content: space-evenly;
 }
