cambios de maquetación, +footer móvil, +responsives

--- a/client/src/components/MyButton/MyButton.css
+++ b/client/src/components/MyButton/MyButton.css
@@ -37,13 +37,22 @@
 }
 
 .btn-blue-circle {
- background-color: rgb(68, 126, 247) !important;
-  
+  background-color: rgb(68, 126, 247) !important;
+
   border: none !important;
   border-radius: 50% !important;
- 
-&:hover {
+
+  &:hover {
     background-color: rgb(38, 75, 151) !important;
   }
 }
 
+.navbarbutton {
+  max-height: 2.5rem;
+  background-color: rgb(28, 37, 52) !important;
+  border: 1px solid white !important;
+
+  &:hover {
+    background-color: rgb(23, 72, 170) !important;
+  }
+}
