--- a/client/src/components/CompaniesCard/CompaniesCard.css
+++ b/client/src/components/CompaniesCard/CompaniesCard.css
@@ -1,29 +1,40 @@
-.header {
-  font-size: 2rem;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 2rem;
-  color: #1a1a2e;
-}
- 
-.accordion-button:not(.collapsed) {
-  background-color: rgba(35, 41, 35, 0.134);
-  color: inherit;
-  box-shadow: none;
-}
- 
-.accordion-button:focus {
-  box-shadow: none;
-  border-color: transparent;
-}
- 
-.myLink {
-  text-decoration: none;
-}
- 
-.card-accordion {
- 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+.accordCC {
+
+  .info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    min-width: fit-content;
+
+    .info1 {
+      min-width: 15rem;
+    }
+
+    .info2 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+  }
+
+  @media (width <600px) {
+    .info {
+      justify-content: center;
+    }
+  }
+
+  .accordion-button:not(.collapsed) {
+    background-color: rgba(35, 41, 35, 0.134);
+    color: inherit;
+    box-shadow: none;
+  }
+
+  .accordion-button:focus {
+    box-shadow: none;
+    border-color: transparent;
+  }
+
+  .myLink {
+    text-decoration: none;
+  }
 }
