--- a/client/src/components/Navbar/NavbarOffcanvasAdmin/NavbarOffcanvasAdmin.css
+++ b/client/src/components/Navbar/NavbarOffcanvasAdmin/NavbarOffcanvasAdmin.css
@@ -4,6 +4,8 @@
   padding: 1rem;
   color: white;
   min-height: 5rem;
+  display: flex;
+  justify-content: space-between;
 
   position: fixed;
   width: 100%;
