--- a/client/src/pages/AdminPages/AllCompanies/AllCompanies.css
+++ b/client/src/pages/AdminPages/AllCompanies/AllCompanies.css
@@ -1,43 +1,54 @@
-.search {
-  display: flex;
-  gap: 10px;
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  flex-wrap: wrap; 
-  align-items: center;
-}
+.AllCompanies {
+  padding: 3rem;
 
-.input,
-.select {
-  padding: 12px;
-  font-size: 15px;
-  border: 1px solid #cccccc;
-  border-radius: 6px;
-  flex: 1;
-  min-width: 250px;
-}
+  .ACtitle {
+    text-align: center;
+    font-weight: bold;
+    padding: 3rem;
+    border-radius: 0.5rem;
+    background: white;
+    border: 1px solid rgb(231, 235, 242);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    min-width: fit-content;
+  }
 
-.card {
-  width: 100%; 
-  max-width: 100%;
-  overflow: hidden;
-  border-radius: 8px;
-  background: #fff;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
- 
-}
+  .search {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    padding: 1rem;
+    flex-wrap: wrap;
+    align-items: center;
 
-.no-results {
-  background-color: #f8f9fa;
-  border-radius: 8px;
-  border: 2px dashed #ccc;
-  margin-top: 20px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
+    .input {
+      min-width: 19rem;
+    }
+  }
 
-.no-results h4 {
-  color: #6c757d;
-  font-weight: 400;
+  .input,
+  .select {
+    padding: 0.5rem;
+    border: 1px solid #cccccc;
+    border-radius: 1rem;
+  }
+
+  .selectCont {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+
+  .no-results {
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    border: 2px dashed #ccc;
+    margin-top: 20px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .no-results h4 {
+    color: #6c757d;
+    font-weight: 400;
+  }
+
 }
