--- a/client/src/pages/companyPages/NewTestPage/newTest.css
+++ b/client/src/pages/companyPages/NewTestPage/newTest.css
@@ -1,24 +1,18 @@
 .oneQuestionPages {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 3rem;
-
-  flex: 1;
-  min-height: 0;
-  overflow: auto;
+  padding: 2rem;
 
   .progress-bar {
-
     .progress-bar-container {
-
       height: 20px;
       border-radius: 2rem;
       width: 70%;
 
       .progress-bar-result {
-
         background-color: #2C9947;
-
       }
     }
   }
@@ -30,22 +24,29 @@
     gap: 2rem;
 
     img {
-      width: 100px;
-      border-radius: 2rem;
+      width: 6rem;
+      border-radius: 1rem;
     }
   }
 
   .questionsContainer {
-
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
   .btn-class {
-
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1rem;
+  }
+
+  @media (width < 700px) {
+    .btn-class {
+      display: flex;
+      flex-direction: column;
+      max-width: 15rem;
+    }
   }
 }
