responsive design companyregister

--- a/client/src/components/Navbar/NavbarHeaderGeneral/navgen.css
+++ b/client/src/components/Navbar/NavbarHeaderGeneral/navgen.css
@@ -2,6 +2,12 @@
   background-color: rgb(250, 252, 254);
   display: flex;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 1rem;
   flex-wrap: wrap;
+}
+
+@media (width <=820px) {
+  .navgen {
+    justify-content: space-evenly;
+  }
 }
