--- a/client/src/components/FormCompanyRegister/formCompanyRegister.css
+++ b/client/src/components/FormCompanyRegister/formCompanyRegister.css
@@ -1,112 +1,111 @@
 .register-profile-container {
-  background-color: var(--bg);
-  min-height: 100vh;
-  margin-left: 20px;
-  width: calc(100% - 20px)
-}
-
-.header-content {
   display: flex;
-  justify-content: space-between;
-  align-items: center
-}
-
-.form-main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-}
+  justify-content: center;
+  margin-left: -100px;
+  padding: 0.5rem;
 
-.form-section{
-  width: 70%;
-}
-
-.form-card{
-  background-color: #FFFFFF;
-  border-radius: 16px;
-  padding: 2.5rem;
-  border: 1px solid #EDF2F7;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  margin-top: 1rem;
-  font-weight: 600;
-  font-size: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  gap: .9rem;
-
-  input, select{
-    border-radius: 8px;
-    width: 50%;
-    padding: 1px;
-    margin-inline-start: 1rem;
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
   }
+
+  .form-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .form-card {
+    background-color: #FFFFFF;
+    border-radius: 16px;
+    padding: 2.5rem;
+    border: 1px solid #EDF2F7;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    margin-top: 1rem;
+    font-weight: 600;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    gap: .9rem;
+
+    .myinput {
+      border-radius: 0.5rem;
+      width: 60%;
+      padding: 0.2rem;
+      margin-inline-start: 1rem;
+    }
+  }
+
+  @media (width > 1000px) {
+    .form-card {
+      width: 50rem;
+    }
+  }
+
+  @media (width < 1100px) {
+    .form-card {
+      width: 40rem;
+    }
+  }
+
+  @media (width < 900px) {
+    .form-card {
+      width: 30rem;
+    }
+  }
+
+  @media (width < 850px) {
+    .form-card {
+      width: fit-content;
+    }
+
+    .title-form {
+      padding: -2rem;
+    }
+  }
+
+  .title-form {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #475569;
+    margin-left: 50px;
+  }
+
+  .btnform {
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .checkbox-container {
+    padding: 0.5rem;
+    background-color: #F8FAFC;
+    border: 1px solid #E2E8F0;
+    border-radius: 0.5rem;
+
+    .checkbox-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      line-height: 1.5rem;
+      padding: 1rem;
+    }
+
+    .checkbox-item {
+      gap: 0.5rem;
+      padding: 0.2rem;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+  }
+
+  .red {
+    color: red;
+  }
+
 }
-
-.title-form {
-  font-size: 3rem;
-  font-weight: 600;
-  color: #475569;
-  margin-bottom: 2rem;
-  display: flex;
-  align-items: center
-}
-
-.btn {
-  display: flex;
-  justify-content: center;
-  gap: 5rem;
-  margin-block-start: 1.5rem;
-}
-
-/* Estilo check boxes */
-
-.checkbox-container {
-  margin-top: 2rem;
-  padding: 10px;
-  background-color: #F8FAFC;
-  border: 1px solid #E2E8F0;
-  border-radius: 12px;
-  height: 100%
-}
-
-.checkbox-group {
-}
-
-.checkbox-grid{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px 20px;
-
-}
-
-.checkbox-item{
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  cursor: pointer;
-}
-
-.checkbox-item input{
-  margin:0;
-  flex-shrink: 0;
-}
-
-.checkbox-group input {
-  margin-bottom: 10px;
-  min-height: 1.5rem;
-  border: 1px solid #CBD5E1;
-  cursor: pointer
-}
-
-.checkbox-group label {
-  margin-top: 0 !important;
-  color: #475569;
-  cursor: pointer
-}
-
-.red{
-  color:red;
-}
-
