--- a/client/src/components/FormCompanyRegister/formCompanyRegister.css
+++ b/client/src/components/FormCompanyRegister/formCompanyRegister.css
@@ -1,15 +1,10 @@
 .register-profile-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-left: -100px;
   padding: 0.5rem;
-
-  .header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center
-  }
 
   .form-main {
     display: flex;
@@ -82,6 +77,7 @@
     gap: 2rem;
   }
 
+  /* Estilo check boxes */
   .checkbox-container {
     padding: 0.5rem;
     background-color: #F8FAFC;
