--- a/client/src/pages/companyPages/EditCompanyPage/EditCompany.css
+++ b/client/src/pages/companyPages/EditCompanyPage/EditCompany.css
@@ -1,81 +1,87 @@
 .edit-profile-container {
-    background-color: var(--bg);
-    min-height: 100vh;
-    margin-left: 20px;
-    width: calc(100% - 20px);
-}
-
-.header-content {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    padding: 3rem;
+
+    .title-form-top {
+        font-size: 2.5rem;
+        font-weight: 600;
+        color: #475569;
+    }
+
+    .form-card {
+        background-color: #ffffff;
+        border-radius: 1rem;
+        padding: 2.5rem;
+        border: 1px solid #edf2f7;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+
+        label {
+            margin-top: 1rem;
+            font-weight: 600;
+            font-size: 1rem;
+        }
+
+        .title-form {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #475569;
+            margin-bottom: 2rem;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .btn-footer {
+        padding: 1rem;
+        display: flex;
+        gap: 2rem;
+        justify-content: end;
+    }
+
+    .checkbox-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2rem;
+        justify-content: center;
+        padding: 1.5rem;
+
+        .checkbox-group {
+            background-color: #f8fafc;
+            padding: 1.5rem;
+            border: 1px solid #e2e8f0;
+            border-radius: 1rem;
+            width: 23rem;
+            min-width: 16rem;
+
+            .checkbox-title {
+                padding: 0.5rem;
+            }
+
+            .stakeholder-check {
+                display: flex;
+                align-items: flex-start;
+                gap: 0.5rem;
+
+                .form-check-input {
+                    align-self: center;
+                    margin-top: 1rem;
+                }
+
+                .form-check-label {
+                    line-height: 2;
+                }
+            }
+        }
+
+    }
 }
 
-.form-card {
-    background-color: #ffffff;
-    border-radius: 16px;
-    padding: 2.5rem;
-    border: 1px solid #edf2f7;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-}
-
-.form-card label {
-    margin-top: 1rem;
-    font-weight: 600;
-    font-size: 1rem;
-}
-
-.title-form {
-    font-size: 1.2rem;
-    font-weight: 600;
-    color: #475569;
-    margin-bottom: 2rem;
-    display: flex;
-    align-items: center;
-}
-
-.btn-footer {
-    display: flex;
-    justify-content: end;
-}
-
-/* Estilo check boxes */
-
-.checkbox-container {
-    margin-top: 2rem;
-    padding: 10px;
-}
-
-.checkbox-group {
-    background-color: #f8fafc;
-    border: 1px solid #e2e8f0;
-    padding: 20px;
-    border-radius: 12px;
-    height: 100%;
-}
-
-.checkbox-title {
-    font-weight: 700;
-    font-size: 1rem;
-    color: #475569;
-    margin-bottom: 15px;
-    display: block;
-    text-transform: uppercase;
-}
-
-.checkbox-group .form-check {
-    margin-bottom: 10px;
-    min-height: 1.5rem;
-}
-
-.checkbox-group .form-check-input {
-    border: 1px solid #CBD5E1;
-    cursor: pointer;
-}
-
-.checkbox-group .form-check-label {
-    margin-top: 0 !important;
-    padding-left: 5px;
-    color: #475569;
-    cursor: pointer;
+@media (width < 900px) {
+    .edit-profile-container {
+        margin-left: -3rem;
+    }
 }
