--- a/client/src/pages/AdminPages/OneCompany/oneCompany.css
+++ b/client/src/pages/AdminPages/OneCompany/oneCompany.css
@@ -1,11 +1,24 @@
 :root {
-  --border: 1px solid grey;
+  --border: 1px solid rgb(231, 235, 242);
   --background-color: #fff;
   --border-radius: 0.5rem;
   --padding-block-name: 2rem;
   --padding-block: 1.5rem;
   --font-size-name: 3.2rem;
 }
+
+@media (max-width: 1100px) {
+  .company_name_div {
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem;
+  }
+}
+
+.button {
+  max-width: 50rem;
+}
+
 
 .company_name_div {
   display: flex;
