--- a/client/src/pages/companyPages/CompanyProfilePage/profile.css
+++ b/client/src/pages/companyPages/CompanyProfilePage/profile.css
@@ -2,7 +2,7 @@
   padding: 3rem;
 
   .profile {
-    background-color: white;
+    background-color: #FFFFFF;
     border: 1px solid rgb(221, 224, 230);
     border-radius: 1rem;
     padding: 3rem;
@@ -39,23 +39,59 @@
     padding: 2rem;
     display: flex;
     gap: 2rem;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    flex-wrap: flex;
+    flex-direction: column
+    ;
 
     img {
-      width: 4rem;
+      width: 5rem;
     }
 
+    .img{
+      width: 2.1rem;
+       margin-right: 0.5rem;
+      vertical-align: middle;
+    }
 
-    .testdata {
+    .btn-details{
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 1rem;
-      width: 20rem;
+      padding: .6rem;
+      border-radius: 20px;
+      background-color: #f0f0f0;
+      border: 1px solid #EDF2F7;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+      p{
+        margin-block-start: .8rem;
+      }
     }
 
+    .btn-details:hover{
+      background-color: #bab9b9;
+    }
+    .oneTest{
+      background-color: #FFFFFF;
+      border: 1px solid #EDF2F7;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap:3rem;
+      border-radius: 20px;
+      padding: 2rem;
+      .test-info{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      }
+
+      .test-details{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
     .name p {
       margin: 0;
     }
@@ -64,12 +100,35 @@
       height: 3rem;
     }
 
-    .progressbar {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 1rem;
+    .resultBar{
+      width: 100%;
+      margin-block-start: 1rem;
     }
+
+    .progressCont{
+      width: 100%;
+      height: 1rem;
+      background-color: #e0e0e0;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .progressFill{
+      height: 100%;
+      background-color: #4caf50;
+      transition: width 0.5s ease;
+    }
+
+    .progressFill.low{
+      background-color: #f44336;
+    }
+    .progressFill.medium{
+      background-color: #ff9800;
+    }
+    .progressFill.high{
+      background-color: #4caf50;
+    }
+
   }
 
 }
