--- a/client/src/layouts/layout.css
+++ b/client/src/layouts/layout.css
@@ -11,13 +11,13 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  padding-left: 3rem;
 }
 
 @media (width >=821px) {
   .layoutAdminPublic {
     display: grid;
     grid-template-columns: 16rem auto;
+    column-gap: 3rem;
   }
 
   .mobile {
