--- a/client/src/pages/AdminPages/AdminTests/AdminTests.css
+++ b/client/src/pages/AdminPages/AdminTests/AdminTests.css
@@ -1,3 +1,7 @@
+.AdmintestsContainer {
+  padding: 3rem;
+}
+
 .AdmintestsContainer>div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -9,6 +13,14 @@
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
+}
+
+@media (width <= 450px) {
+  .AdmintestsContainer {
+    display: flex;
+    justify-content: center;
+
+  }  
 }
 
 @media (width < 1100px) {
