--- a/client/src/pages/AdminPages/OneCompany/oneCompany.css
+++ b/client/src/pages/AdminPages/OneCompany/oneCompany.css
@@ -2,21 +2,62 @@
   --border: 1px solid rgb(231, 235, 242);
   --background-color: #fff;
   --border-radius: 0.5rem;
-  --padding-block-name: 2rem;
   --padding-block: 1.5rem;
-  --font-size-name: 3.2rem;
+  --padding-block-name: 2rem;
+  --font-size-name: 3rem;
+  --name-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  --padding-oneCompany: 3rem;
+  --padding-inline-oneCompany: 6rem;
+  --button-max-width: 20rem;
+  --media-padding: 1rem;
+}
+
+@media (max-width: 450px) {
+  .company_name_div {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-inline: 1rem;
+  }
+
+  .company_name_div h1 {
+    text-align: center;
+    margin: 0;
+  }
+
+  .button {
+    margin-top: 1rem;
+    width: 100%;
+    max-width: var(--button-max-width);
+  }
 }
 
 @media (max-width: 1100px) {
   .company_name_div {
     flex-direction: column;
     text-align: center;
-    padding: 1rem;
+
+  }
+
+
+
+  .button {
+    max-width: var(--button-max-width);
+    margin: auto;
+    padding-block: var(--media-padding);
   }
 }
 
-.button {
-  max-width: 50rem;
+@media (min-width: 1100px) {
+
+  .company_name_div h1{
+    /* padding: var(--media-padding); */
+  }
+}
+
+
+.one_Company {
+  padding-inline: var(--padding-oneCompany);
 }
 
 
@@ -25,8 +66,10 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding: var(--padding-block-name);
+  padding-inline: var(--padding-inline-oneCompany);
   border: var(--border);
   border-radius: var(--border-radius);
+  box-shadow: var(--name-box-shadow);
   background-color: var(--background-color);
 }
 
