--- a/client/src/components/HistoricTestContainer/historyTest.css
+++ b/client/src/components/HistoricTestContainer/historyTest.css
@@ -1,12 +1,32 @@
+@media (max-width: 450px) {
+  .historyTestList {
+    display: flex;
+    padding-inline: 1rem;
+    padding-block: 2rem;
+  }
+
+}
+
+@media (min-width: 450px) {
+  .historyTestList {
+    padding: 1rem 4rem;
+  }
+
+  .historyTestCard {
+    
+  }
+}
+
+
+
 .historyTestList {
   background-color: #1C2534;
   display: flex;
   flex-direction: column;
-
-  padding: 1rem 4rem;
   gap: 1rem;
   border-radius: .5rem;
-  width: 80%;
+  width: 100%;
+  min-width: 15rem;
 
   .historyTestCard {
     background-color: white;
