--- a/client/src/components/CardTest/cardTest.css
+++ b/client/src/components/CardTest/cardTest.css
@@ -7,7 +7,7 @@
   padding: 2rem;
   border-radius: .5rem;
   gap: 2rem;
-    height: 23rem;
+  max-height: 25rem;
 
   .image-title {
 
@@ -22,6 +22,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      min-height: 10rem;
     }
   }
 
