--- a/client/src/components/HistoricTestContainer/historyTest.css
+++ b/client/src/components/HistoricTestContainer/historyTest.css
@@ -1,7 +1,12 @@
+:root {
+  --gap-padding: 1rem;
+  --border-gap-padding: ;
+}
+
 @media (max-width: 450px) {
   .historyTestList {
     display: flex;
-    padding-inline: 1rem;
+    padding-inline: var(--gap-padding);
     padding-block: 2rem;
   }
 }
@@ -18,8 +23,8 @@
   background-color: #1C2534;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  border-radius: .5rem;
+  gap: var(--gap-padding);
+  border-radius: var(--border-gap-padding);
   width: 100%;
   min-width: 15rem;
 
@@ -27,10 +32,10 @@
     background-color: white;
     display: flex;
     justify-content: space-around;
-    gap: 0.5rem;
+    gap: var(--border-gap-padding);
     align-items: center;
-    border-radius: .5rem;
-    padding: .5rem;
+    border-radius: var(--border-gap-padding);
+    padding: var(--border-gap-padding);
     min-width: 10rem;
 
     p {
