--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,8 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #fafcfe;
+html {
+  background-color: var(--bg);
+  min-height: 100vh;
+
 }
