--- a/client/src/pages/companyPages/AllTestsPage/AllTests.css
+++ b/client/src/pages/companyPages/AllTestsPage/AllTests.css
@@ -1,5 +1,7 @@
-.userTests {
-  padding: 3rem;
+@media (min-width: 1100px) {
+  .userTests {
+    padding: 3rem;
+  }
 }
 
 .userTests>div {
@@ -18,7 +20,6 @@
 @media (width < 1100px) {
   .userTests>div {
     grid-template-columns: 1fr;
-
-    padding-top: 1.5rem;
+    padding-block: 2rem;
   }
 }
