--- a/client/src/pages/companyPages/CompanyProfilePage/profile.css
+++ b/client/src/pages/companyPages/CompanyProfilePage/profile.css
@@ -1,42 +1,81 @@
 @media (max-width: 450px) {
+  .profileContainer {
+    padding-inline: 1rem;
+    padding-block: 2rem;
+  }
+
   .data {
    display: flex;
    flex-direction: column;
   }
 
-
   .ranking {
-    display: flex;
     margin-inline: auto;
   }
-  
-  .profileContainer {
-    padding: 1.5rem;
+
+  .test-info {
+    width: 100%;
   }
+
+  .image-title {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+
+  }
+
 
   .testscont {
-    padding: 1rem;
+    padding-block: 1.2rem;
+    padding-inline: 0.7rem;
+    gap: 1.2rem;
   }
-
+  
   .oneTest {
     padding: 1rem;
-
+    
     img {
       max-width: 3.5rem;
     }
-
+    
     h3 {
       padding-inline: 0.5rem;
-      font-size: clamp(1.2rem, 4vw, 1.6rem);;
+      font-size: clamp(1.2rem, 4vw, 1.6rem);
     }
-
-
+    
+    
     .btn-details {
       max-width: 6rem;
       max-height: 2rem;
       font-size: 0.9rem;
     }
+    
+    .test-info {
+      display: flex;
+      flex-direction: column;      
+    }
+    
+  }
+  
+  .progressContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-block: 1rem;
+    gap: 0.8rem;
+  }
+  
+  .progressBarContainer {
+    max-width: 7rem;
+  }
 
+  .btn-details {
+    padding-inline: 0.5rem;
+    align-items: center;
+    justify-content: center;
   }
 
 
@@ -46,6 +85,10 @@
 @media (min-width: 1100px){
  .profileContainer  {
     padding: 3rem;
+  }
+
+  .testscont {
+    gap: 2rem;
   }
 
   .ranking {
@@ -61,8 +104,32 @@
     padding: 2rem;
   }
 
+  .test-info {
+    display: flex;
+    justify-content: space-between;
+  
+  }
 
+  .test-info h3{
+      
+    font-size: clamp(1.5rem, 2vw, 1.8rem);
+    max-width: 35rem;
+  }
+
+  .image-title {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+  }
+
+  .progressContainer{
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+    }
 }
+
 
 .profileContainer {
   
@@ -78,28 +145,22 @@
     justify-content: space-between;
 
 
-
-      .data {
-        min-width: 20rem;
-      } 
-
-      .position {
-        background-color: rgb(25, 43, 72);
-        color: white;
-        font-size: larger;
-        padding: 0.5rem;
-        text-align: center;
-        border-radius: 20rem;
-      }
+    .position {
+      background-color: rgb(25, 43, 72);
+      color: white;
+      font-size: larger;
+      padding: 0.5rem;
+      text-align: center;
+      border-radius: 20rem;
     }
   }
+}
 
   .testscont {
     background-color: white;
     border: 1px solid rgb(221, 224, 230);
     border-radius: 1rem;
     display: flex;
-    gap: 2rem;
     flex-wrap: flex;
     flex-direction: column
     ;
@@ -115,12 +176,12 @@
     }
 
     .progressBarContainer {
-      
+      display: flex;
       width: 150px;
       height: 20px;
       border-radius: 2rem;
       background-color: #E5E7EA;
-
+      
 
       .progressBarHigh {
         height: 20px;
@@ -149,7 +210,7 @@
 
     .btn-details{
       display: flex;
-      padding: .6rem;
+      padding-inline: 1rem;
       border-radius: 20px;
       background-color: #f0f0f0;
       border: 1px solid #EDF2F7;
@@ -171,13 +232,8 @@
       display: flex;
       flex-direction: column;
       gap:3rem;
-      border-radius: 20px;
-      
-      .test-info{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      }
+      border-radius: 20px; 
+
 
       .test-details{
         width: 100%;
