--- a/client/src/components/BarChart/barChart.css
+++ b/client/src/components/BarChart/barChart.css
@@ -1,3 +1,18 @@
 .recharts-legend-item-text{
   font-size: 1.5rem;
 }
+
+.chart-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3rem;
+  align-items: center;
+  padding-block: 2rem;
+  padding-inline: 2rem;
+  .chart {
+    height: 400px;
+    width: 700px;
+  }
+}
+
