--- a/client/src/components/BarChart/barChart.css
+++ b/client/src/components/BarChart/barChart.css
@@ -2,6 +2,8 @@
   font-size: 1.5rem;
 }
 
+
+
 .chart-div {
   display: flex;
   flex-direction: column;
@@ -10,9 +12,22 @@
   align-items: center;
   padding-block: 2rem;
   padding-inline: 2rem;
+  
+}
+
+@media (min-width: 1100px) {
   .chart {
     height: 400px;
     width: 700px;
   }
 }
 
+
+@media (max-width: 450px) {
+  .chart {
+  
+    width: 360px;
+  }
+
+
+}
