--- a/client/src/pages/companyPages/ComanyTestSaved/CompanyTestSaved.css
+++ b/client/src/pages/companyPages/ComanyTestSaved/CompanyTestSaved.css
@@ -1,13 +1,9 @@
 
 .test-card {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   background-color: #FFFFFF;
   border-radius: 16px;
   padding: 2rem;
-  margin-left: 2.2rem; 
-  margin-right: 2.2rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
   border: 1px solid #EDF2F7;
 }
@@ -30,6 +26,8 @@
 
 
 
+
+
 .test-image img {
   width: 5rem;
   object-fit: contain;
@@ -45,12 +43,52 @@
 /* responsive */
 @media (max-width: 768px) {
   .test-card {
-    margin-left: 0;
+    display: flex;
+    width: 100%;
+    justify-content: center;
     flex-direction: column;
     gap: 0.75rem;
+    /* justify-content: space-between; */
   }
 
   .test-image {
     align-self: flex-end;
   }
+
+  .company_div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .test_div {
+    display: flex;
+  }
+
+
+}
+
+@media (min-width: 1100px) {
+
+  .test-card {
+    margin-left: 2.2rem; 
+    margin-right: 2.2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .company_div {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding-bottom: 1rem;
+}
+
+.test_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
 }
