--- a/client/src/components/FormUserLogin/FormUserLogin.css
+++ b/client/src/components/FormUserLogin/FormUserLogin.css
@@ -3,7 +3,7 @@
   border: 1px solid lightgray;
   border-radius: 1rem;
   background-color: white;
-  width: 40rem;
+  max-width: 40rem;
 
   h1 {
     padding-bottom: 2rem;
@@ -13,4 +13,16 @@
 .error-alert {
   font-size: 12px;
   color: red;
+}
+
+@media (width > 500px) {
+  .login-container {
+    width: 30rem;
+  }
+}
+
+@media (width < 500px) {
+  .login-container {
+    padding: 1.5rem;
+  }
 }
