--- a/client/src/components/FormUserRegister/FormUserRegister.css
+++ b/client/src/components/FormUserRegister/FormUserRegister.css
@@ -3,22 +3,31 @@
   border: 1px solid lightgray;
   border-radius: 1rem;
   background-color: white;
-  width: 40rem;
+  width: 100%;
 
   h1 {
     padding-bottom: 2rem;
   }
 }
+
 .error-alert {
   font-size: 12px;
   color: red;
 }
 
 .reset-pass-link {
-  width: 40rem;
   display: flex;
   padding: 1rem;
+
   .rpl {
     text-decoration: none;
+  }
+}
+
+@media (max-width: 650px) {
+  .register-container,
+  .reset-pass-link {
+    max-width: 20rem;
+    padding: 1rem;
   }
 }
