--- a/client/src/pages/AdminPages/OneTest/oneTestAd.css
+++ b/client/src/pages/AdminPages/OneTest/oneTestAd.css
@@ -67,9 +67,19 @@
       border: 1px solid rgb(231, 235, 242);
       border-radius: .5rem;
       padding: 1rem;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
+      display: grid;
+      align-items: center;
+      grid-template-columns: 1.5fr 1fr 1fr;
+    }
+
+    @media (width < 1000px) {
+      .company-box {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+        justify-items: center;
+        text-align: center;
+        gap: 1rem;
+      }
     }
   }
 
