--- a/client/src/pages/publicPages/HomePage/Home.css
+++ b/client/src/pages/publicPages/HomePage/Home.css
@@ -1,9 +1,11 @@
 .homepage {
-  min-height: 70dvh;
   padding: 3rem;
   background-color: rgb(250, 252, 254);
-  font-size: larger;
   text-align: center;
+
+  section {
+    padding: 2rem;
+  }
 
   .section1 {
     align-items: center;
@@ -12,8 +14,25 @@
     margin: 0 auto;
   }
 
-  section {
-    padding: 2rem;
+  .section-register {
+    min-height: 50dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .first-text {
+      max-width: 40rem;
+      padding-top: 2rem;
+      padding-bottom: 3rem;
+    }
+  }
+
+  .cards-cont {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: space-evenly;
+    padding-top: 2rem;
   }
 
   .card-unique {
@@ -41,22 +60,71 @@
     }
   }
 
-  .collab {
-    margin-left: -50px;
-    margin-right: -50px;
-    height: 20rem;
-    background-image: url("/src/assets/Images/forHome/lineBg.svg");
-    background-size: cover;
-    background-position: center;
+  .section-5 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .col1 {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* no overflow */
+      flex: 1 1 30rem;
+      gap: 1rem;
+    }
+
+    .mini-section {
+      display: flex;
+      align-items: center;
+      background-color: white;
+      gap: 1rem;
+      width: 25rem;
+      padding-top: 1rem;
+      padding-left: 1rem;
+      border: 1px solid rgb(227, 227, 227);
+      border-radius: 1rem;
+
+      img {
+        height: 3em;
+        margin-bottom: 10px;
+      }
+    }
+
+    .graphic {
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+
+      img {
+        border-radius: 1rem;
+        max-height: 30rem;
+      }
+    }
   }
 
-  .logos {
+  .section-6 {
+    color: white;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-left: -50px;
+    margin-right: -50px;
+    background-color: rgb(16, 40, 48);
+    background-size: 70px 120px;
+    background-image:
+      repeating-linear-gradient(120deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px),
+      repeating-linear-gradient(60deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px),
+      linear-gradient(60deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)),
+      linear-gradient(120deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
 
     img {
-      width: 18rem;
+      max-width: 30rem;
+    }
+
+    .col2 {
+      padding-right: 1rem;
+      max-width: 30rem;
+      line-height: 2rem;
     }
   }
 
@@ -71,99 +139,85 @@
     display: flex;
     flex-direction: column;
 
-    .logos2 {
-      display: flex;     
+    .logos {
+      display: flex;
       flex-wrap: wrap;
       flex-direction: row;
       justify-content: space-evenly;
       gap: 2rem;
 
       .santander {
-        width: 13rem;
+        width: 12rem;
       }
 
       img {
-        height: 5rem;
+        height: 4rem;
       }
-    }
-  }
-
-  .section-register {
-    min-height: 50dvh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .first-text {
-      max-width: 40rem;
-      padding-top: 2rem;
-      padding-bottom: 3rem;
     }
   }
 
   .section-contact {
-    height: 70dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+}
 
-  .section-5 {
-    display: flex;
-    justify-content: center;
 
-    .col1 {
-      min-width: 30rem;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+/* MEDIA RESPONSIVE */
+@media (width < 500px) {
+  .homepage {
+    margin-top: 5rem;
+    padding: 2rem;
+
+    section {
+      padding: 1rem;
     }
 
-    .mini-section {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
+    .section-5 {
+      .col1 {
+        .mini-section {
+          width: 20rem;
+        }
+      }
 
-      img {
-        height: 5rem;
+      .graphic {
+        img {
+          width: 20rem;
+          height: 15rem;
+        }
       }
     }
 
-    .graphic {
-      display: flex;
-      justify-content: center;
-
+    .section-6 {
       img {
-        max-width: 40rem;
-        min-width: 35rem;
+        width: 20rem;
+      }
+
+      .col2 {
+        margin-left: 2rem;
+      }
+    }
+
+    .recon {
+      padding-top: 1rem;
+
+      .logos {
+        flex-direction: column;
+        align-items: center;
+
+        img {
+          min-width: 5rem;
+        }
+      }
+    }
+
+    .section-contact {
+      h2 {
+        padding-top: 4rem;
+        padding-bottom: 1rem;
       }
     }
   }
-
-  .section-6 {
-    color: white;
-    margin-left: -50px;
-    margin-right: -50px;
-    background-color: rgb(16, 40, 48);
-    background-image:
-      repeating-linear-gradient(120deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px),
-      repeating-linear-gradient(60deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px),
-      linear-gradient(60deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)),
-      linear-gradient(120deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
-    background-size: 70px 120px;
-
-    img {
-      max-width: 30rem;
-    }
-
-    .col2 {
-      padding-right: 2rem;
-      min-width: 30rem;
-      line-height: 2.2rem;
-    }
-  }
-
-  
-
 }
